# python-sdk

./: .gitignore  .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
alphaiq_sdk/: __init__.py  __main__.py  api_client.py  client.py  config.py  configuration.py  exceptions.py  generative.py  identifiers.py  investment_researchers_api.py  mapping.py  models.py  rest.py  signals.py  users.py
docs/: BulkMappingGet200Response.md  BulkMappingGet200ResponseData.md  Category.md  CompanyCompassReport.md  CompanyCompassReportContent.md  CompanyCompassReportContentData.md  CompanyCompassReportContentDataCompassContent.md  CompanyCompassReportData.md  CompanyInfoModel.md  CompanyInfoModel1.md  CompanyMappingCompanyToSecurity.md  CompanyMappingCompanyToSecurityData.md  CompanyMappingCompanyToSecurityModel.md  CompanyQuestionAnswer.md  CompanyQuestionAnswerData.md  CompanyQuestionAnswerDataQuestionAnswer.md  CompanySpinsightsExplorer.md  CompanySpinsightsExplorerData.md  CompanySpinsightsExplorerDataSpinsightsExplorer.md  CompanySpinsightsReport.md  CompanySpinsightsReportContent.md  CompanySpinsightsReportContentData.md  CompanySpinsightsReportContentDataSpinsightsContent.md  CompanySpinsightsReportData.md  CompanySpinsightsReportPDFTickerGet404Response.md  CompanySpinsightsReportPDFTickerGet404ResponseErrorsInner.md  FactorLibraryCompassQuestions.md  FactorLibraryCompassQuestionsData.md  FactorLibraryCompassQuestionsModel.md  FactorLibrarySpindexFactors.md  FactorLibrarySpindexFactorsData.md  FactorLibrarySpindexFactorsDataItems.md  FactorLibrarySpindexFactorsModel.md  FileDownloadModel.md  FileDownloadModel1.md  FileDownloadModelData.md  FileDownloadModelData1.md  GenerativeCompanyCompassReportContentModel.md  GenerativeCompanyCompassReportContentModelCompassContent.md  GenerativeCompanyCompassReportContentModelData.md  (+125 more)
examples/: example_factor_visibility.py  example_generative_content.py  example_spindex_timeseries.py
openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
test/: test_category.py  test_inline_object.py  test_inline_object1.py  test_inline_object2.py  test_inline_object3.py  test_inline_object4.py  test_inline_response200.py  (+92 more)
(+249 files in other folders)
